--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             <div class="container-fluid">
                <!-- nav -->
                <nav >
+                 <a class="" href="index.html"><img src="images/logo.png" alt="" class="img-logo" width="15%" height="15%"></a>
+                 <!--
                   <div id="logo">
-                    <!--<img src="images/logo.png" alt="" class="img-logo" width="15%" height="15%">-->
-                     <h1><a class="" href="index.html">ERFI<span>Charity Fund </span></a>
+                    <h1><a class="" href="index.html">ERFI<span>Charity Fund </span></a>
                   </div>
+                  -->
                   <label for="drop" class="toggle">Menu</label>
                   <input type="checkbox" id="drop">
                   <ul class="menu mt-2">
